--- a/index.html
+++ b/index.html
@@ -34,7 +34,33 @@
     </div>
 
     <script>
-        function generateClimate() {
+        const apiKey = 'YOUR_RANDOM_ORG_API_KEY'; // Sostituire con la propria API key di Random.org
+
+        async function getRandomNumber(min, max) {
+            const response = await fetch(`https://api.random.org/json-rpc/2/invoke`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    jsonrpc: '2.0',
+                    method: 'generateIntegers',
+                    params: {
+                        apiKey: apiKey,
+                        n: 1,
+                        min: min,
+                        max: max,
+                        replacement: true
+                    },
+                    id: 1
+                })
+            });
+
+            const data = await response.json();
+            return data.result.random.data[0];
+        }
+
+        async function generateClimate() {
             const climates = [
                 { type: "Piogge Acide", description: "Piogge acide che corrodono lentamente le superfici e rendono l'aria irrespirabile senza protezioni.", temperatureRange: [10, 20] },
                 { type: "Tempeste di Sabbia", description: "Tempeste di sabbia provenienti dal deserto che oscurano il cielo e riducono drasticamente la visibilità.", temperatureRange: [30, 40] },
@@ -48,14 +74,11 @@
                 { type: "Umidità Asfissiante", description: "Un livello di umidità insopportabile che rende difficile la respirazione e provoca un caldo opprimente.", temperatureRange: [25, 35] }
             ];
 
-            // Scegli un clima randomicamente
-            const randomClimate = climates[Math.floor(Math.random() * climates.length)];
+            const randomIndex = await getRandomNumber(0, climates.length - 1);
+            const randomClimate = climates[randomIndex];
 
-            // Genera una temperatura randomica all'interno del range specificato
-            const temperature = Math.floor(Math.random() * (randomClimate.temperatureRange[1] - randomClimate.temperatureRange[0] + 1)) + randomClimate.temperatureRange[0];
-
-            // Genera un livello di umidità randomico tra 20% e 100%
-            const humidity = Math.floor(Math.random() * 81) + 20;
+            const temperature = await getRandomNumber(randomClimate.temperatureRange[0], randomClimate.temperatureRange[1]);
+            const humidity = await getRandomNumber(20, 100);
 
             return {
                 type: randomClimate.type,
@@ -65,17 +88,16 @@
             };
         }
 
-        // Funzione per aggiornare la visualizzazione del clima
-        function updateClimate() {
-            const climate = generateClimate();
+        async function updateClimate() {
+            const climate = await generateClimate();
             document.getElementById('climate-type').innerText = climate.type;
             document.getElementById('climate-description').innerText = climate.description;
             document.getElementById('climate-temperature').innerText = climate.temperature;
             document.getElementById('climate-humidity').innerText = climate.humidity;
         }
 
-        // Aggiorna il clima quando la pagina viene caricata
         window.onload = updateClimate;
     </script>
 </body>
 </html>
+
