--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <script>
-        const apiKey = 'YOUR_RANDOM_ORG_API_KEY'; // Sostituire con la propria API key di Random.org
+        const apiKey = '5fe4b420-6441-430a-89e8-f22f1b9876b0'; // Sostituire con la propria API key di Random.org
 
         async function getRandomNumber(min, max) {
             const response = await fetch(`https://api.random.org/json-rpc/2/invoke`, {
